@@ -1,3 +1,8 @@
+2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.XmlEditor.addin.xml, MonoDevelop.XmlEditor.mds: Bump MD
+	  version.
+
 2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.XmlEditor/XmlEditorService.cs: Use the OnDestroyed event
